# Face_Spoof_MNN

./: CMakeLists.txt  README.md  auto.sh  face_spoof
models/: face_spoof.mnn
src/: FaceAligner.cpp  FaceAligner.hpp  FaceDetect.cpp  FaceDetect.h  FaceSpoof.cpp  FaceSpoof.hpp  main.cpp  video.cpp
